[package]
name = "doc_dig"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "doc_dig"
crate-type = ["cdylib"]

[dependencies]
extractous = "0.3.0"
rustler = "0.36.1"

openssl = { version = "0.10.64", features = ["vendored"] }

[build-dependencies]
extractous = "0.3.0"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }

[patch.crates-io.reqwest]
version = "0.12.7"
default-features = false
features = ["blocking", "json", "rustls-tls"]
