[package]
name = "doc_dig"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "doc_dig"
crate-type = ["cdylib"]

[dependencies]
extractous = "0.3.0"
rustler = "0.36.1"

[build-dependencies]
extractous = "0.3.0"

[patch.crates-io]
# Force openssl-sys to use its bundled sources (no pkg-config)
openssl-sys = { version = "0.10.64", features = ["vendored"] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
